# inference_server

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
action/: Inference.action  InferenceAdvanced.action
launch/: inference_server.launch
msg/: BoundingBox.msg
src/: imagenet_server_node.py  inference_advanced_server_node.py  inference_advanced_server_node_class.py  inference_server_node.py  obj_det_class.py  obj_det_fun.py  obj_det_fun_advanced.py  object_detection_class.py
srv/: ChangeInferenceModel.srv
